Java 8 compatibility * Replaced usage of String.isBlank() with apache commons-lang3's StringUtils.isBlank(string) in order to allow execution from Java 8 JRE